# docsmith

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build-release.yml  ci.yml
base/: Cargo.toml
base/src/: error.rs  html_exporter.rs  lib.rs  logging.rs  markdown.rs  model.rs  result.rs
base/src/html_exporter/: convert_code_block.rs  convert_document.rs  convert_heading.rs  convert_link.rs  convert_passthru.rs  convert_simple.rs  convert_tag.rs  exporter.rs
base/src/model/: element.rs  exporter.rs  key.rs  span.rs  value.rs
cli/: Cargo.toml
cli/src/: docsmith_cli.rs  main.rs
docsmith-ui/: index.html  package.json  pnpm-lock.yaml
docsmith-ui/src/: document.js  index.tsx
docsmith-ui/src/assets/: foo.js
docsmith-ui/src/model/: document.ts  element.ts
docsmith-ui/src/viewer/: ContentView.tsx  DocsmithApp.tsx  MainView.tsx  Navbar.tsx  OutlineView.tsx
export-html/: Cargo.toml
export-html/src/: convert_code_block.rs  convert_document.rs  convert_heading.rs  convert_link.rs  convert_passthru.rs  convert_simple.rs  convert_tag.rs  html_exporter.rs  lib.rs
model/: Cargo.toml
model/src/: book.rs  chapter.rs  element.rs  exporter.rs  key.rs  lib.rs  tags.rs  value.rs
pal/: Cargo.toml
pal/src/: pal.rs
pal_mock/: Cargo.toml
pal_mock/src/: pal_mock.rs
pal_real/: Cargo.toml
pal_real/src/: pal_real.rs
parser-markdown/: Cargo.toml
parser-markdown/src/: book_toml.rs  lib.rs  markdown.rs  markdown_book.rs  summary.rs
sample-documents/: rust-rfc-0069-ascii-literals.md
scripts/: build_release_package.sh
server/: Cargo.toml
server/examples/: serve_time.rs
server/src/: live_service.rs  server.rs  server_error.rs
server/src/assets/: live_service.html
transformer/: Cargo.toml
transformer/src/: lib.rs  transformer.rs
transformer/src/css/: layout-1.css  layout.css  style.css
ui/: package.json
ui/src/: document.js  index.tsx
ui/src/model/: document.ts  element.ts
ui/src/stores/: documentStore.ts
ui/src/viewer/: ContentView.tsx  DocsmithApp.tsx  Navbar.tsx  OutlineView.tsx
