[workspace]
resolver = "3"
members = ["base", "cli", "transformer", "export-html", "pal_mock", "model", "pal", "pal_mock", "parser-markdown", "pal_real", "server"]


[workspace.dependencies]
expect-test = "1.5.1"


[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimization in Development mode.
opt-level = 0
lto = false
#debug = false
