[package]
name = "docsmith-base"
version = "0.1.0"
edition = "2024"
description = "A documentation generation tool - base crate"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
arcstr = "1.2.0"
pulldown-cmark = "0.13.0"
saphyr-parser = "0.0.6"
tinyjson = "=2.5.1"
itertools = "0.14.0"
pulldown-cmark-escape = "0.11.0"

[dev-dependencies]
expect-test = "1.5.1"

[lints.clippy]
# Causes false positives on context! macro
redundant_closure = "allow"
