[package]
name = "docsmith-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "docsmith_cli"
path = "src/docsmith_cli.rs"

[dependencies]
docsmith-base = {version = "0.1.0", path = "../base"}
docsmith-pal-real = {version = "0.1.0", path = "../pal_real"}
docsmith-model = {version = "0.1.0", path = "../model"}
docsmith-parser-markdown = {version = "0.1.0", path = "../parser-markdown"}
docsmith-export-html = {version = "0.1.0", path = "../export-html"}
docsmith-transformer = {version = "0.1.0", path = "../transformer"}
tracing = "0.1.37"
