[package]
name = "docsmith-export-html"
version = "0.1.0"
edition = "2024"

[dependencies]
docsmith-base = {version = "0.1.0", path = "../base"}
docsmith-model = {version = "0.1.0", path = "../model"}
pulldown-cmark-escape = "0.11.0"

[dev-dependencies]
expect-test = { workspace = true }

docsmith-parser-markdown = {version = "0.1.0", path = "../parser-markdown"}
