[package]
name = "docsmith-parser-markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
docsmith-base = {version = "0.1.0", path = "../base"}
docsmith-model = {version = "0.1.0", path = "../model"}
pulldown-cmark = "0.13.0"
saphyr-parser = "0.0.6"
tinyjson = "=2.5.1"
indenter = "0.3.4"

[dev-dependencies]
expect-test = { workspace = true }

