[package]
name = "docsmith-transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
docsmith-base = {version = "0.1.0", path = "../base"}
docsmith-model = {version = "0.1.0", path = "../model"}
docsmith-pal = {version = "0.1.0", path = "../pal"}
docsmith-parser-markdown = {version = "0.1.0", path = "../parser-markdown"}
docsmith-export-html = {version = "0.1.0", path = "../export-html"}

[dev-dependencies]
docsmith-pal-mock = {version = "0.1.0", path = "../pal_mock"}